mido: Restart HIDL camera provider after decryption
* Restart HIDL camera provider to cover some edge cases where camera isn't
  working on FDE devices with boot pin enabled.

Change-Id: Ia757e9d07de26008f426fca582439d68b6d6fecb

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -354,6 +354,8 @@ on property:vendor.radio.atfwd.start=false
     stop vendor.atfwd
 
 on property:vold.decrypt=trigger_restart_framework
+    stop vendor.camera-provider-2-4
+    start vendor.camera-provider-2-4
     start wcnss-service
 
 on property:persist.env.fastdorm.enabled=true
