--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -612,4 +612,5 @@ service goodix_script /vendor/bin/init.goodix.sh
     oneshot
 
 on property:dev.bootcomplete=1
+    swapon_all /fstab.qcom
     setprop sys.io.scheduler "bfq"
