--- a/AdvancedControls/AndroidManifest.xml
+++ b/AdvancedControls/AndroidManifest.xml
@@ -9,15 +9,15 @@
 
     <uses-sdk
         android:minSdkVersion="27"
-        android:targetSdkVersion="28" />
+        android:targetSdkVersion="27" />
     <application
         android:label="@string/advanced_settings"
         android:icon="@drawable/launcher"
-        android:theme="@android:style/Theme.DeviceDefault.Settings"
+        android:theme="@style/AppTheme"
         android:supportsRtl="true" >
         <activity
             android:name="com.thht.settings.device.DeviceSettings"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/advanced_settings" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,9 +35,7 @@
         </receiver>
         <service
             android:name="com.thht.settings.device.RestoreService"
-						android:directBootAware="true"
-            android:enabled="true"
-            android:exported="true">
-				</service>
+            android:enabled="true">
+		</service>
     </application>
 </manifest>
