Revert "Parts : Remove integration from settings"
This reverts commit d2a7d11a48b097c776f6755f1e07930f8bfea474.

Signed-off-by: sayan7848 <sayan7848@gmail.com>

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -46,9 +46,10 @@
             android:label="@string/dirac_title"
             android:theme="@style/Theme.Main">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                       android:value="com.android.settings.category.ia.sound" />
         </activity>
 
         <service android:name=".doze.DozeService"
@@ -60,7 +61,7 @@
             android:label="@string/ambient_display_title"
             android:theme="@style/Theme.Main">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="org.lineageos.settings.device.DOZE_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
